# wecook_assets

./: CMakeLists.txt  README.md  package.xml
data/food/: bread_slice.stl  bread_slice.urdf  butter.urdf  cheese_slice.urdf  chicken.dae  chicken.urdf  food_item0.urdf  food_item1.urdf  food_item2.urdf  ham_slice.urdf  lime.stl  lime.urdf  pasta.dae  pasta.urdf
data/furniture/: bookcase.urdf  kitchen_counter.urdf  shelf.stl  shelf.urdf  sink_counter.urdf  table.urdf.backup  table_top.urdf  wall.urdf
data/human/: human_short.urdf  mouth.urdf
data/objects/: black_pepper.urdf  bowl.stl  bowl.urdf  bowl_green.urdf  brush.stl  brush.urdf  chopping_board.stl  chopping_board.urdf  cooker.urdf  cooking_pot.urdf  cutting_board.urdf  food_item.urdf  fork.stl  fork.urdf  holder.stl  holder.urdf  knife.stl  knife.urdf  knife_big.urdf  oil.stl  oil.urdf  olive_oil.urdf  pan.stl  pan.urdf  plant.urdf  plate.stl  plate.urdf  pot.urdf  pot_l.urdf  pot_s.urdf  roller.stl  roller.urdf  rolling_pin.stl  rolling_pin.urdf  salt.urdf  skillet.stl  skillet.urdf  soda_can.stl  soda_can.urdf  spoon.stl  (+5 more)
